Integrate it into SearchClients